--- a/src/views/teacher/lessons.ejs
+++ b/src/views/teacher/lessons.ejs
@@ -53,108 +53,13 @@
     </header>
 
     <div>
-        <h2>Obtener todas las lecciones del usuario </h2>
-        <p>Obtén un token temporal para poder realizar peticiones a la API.</p>
-        <h3>HTTP Request</h3>
-        <p class="notice">
-            <span class="method post">POST</span>
-            <a href="<%= host %>/api/login">
-                <%= host %>/api/login
-            </a>
-        </p>
-
-        <h3>Query Parameters</h3>
-        <figure>
-            <table>
-                <thead>
-                    <tr>
-                        <td>parameter</td>
-                        <td>description</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>email</td>
-                        <td><span class="method string">strgin</span> <span class="method required">required</span>
-                            example: email-name@youdomain.com
-                            <p>Un email valido</p>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>password</td>
-                        <td><span class="method string">strgin</span> <span class="method required">required</span>
-                            example: youPassword
-                            <p>Password valido</p>
-                        </td>
-                    </tr>
-
-
-                </tbody>
-            </table>
-        </figure>
-    </div>
-
-    <div>
-        <h2>Registrar un usuario nuevo</h2>
-        <p>Obten una cuenta nueva en la app y un token.</p>
-        <h3>HTTP Request</h3>
-        <p class="notice">
-            <span class="method post">POST</span>
-            <a href="<%= host %>/api/register">
-                <%= host %>/api/register
-            </a>
-        </p>
-
-        <h3>Query Parameters</h3>
-        <figure>
-            <table>
-                <thead>
-                    <tr>
-                        <td>parameter</td>
-                        <td>description</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>name</td>
-                        <td><span class="method string">strgin</span> <span class="method required">required</span>
-                            example: You Name
-                            <p>Un nombre valido si caracteres especiales</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>email</td>
-                        <td><span class="method string">strgin</span> <span class="method required">required</span>
-                            example: email-name@youdomain.com
-                            <p>Un email valido</p>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>password</td>
-                        <td><span class="method string">strgin</span> <span class="method required">required</span>
-                            example: youPassword
-                            <p>Password valido</p>
-                        </td>
-                    </tr>
-
-
-                </tbody>
-            </table>
-        </figure>
-    </div>
-
-
-    <div>
-        <h2>Maestros - Teachers</h2>
-        <h3>Clases Virtuales</h3>
-        <p>Obten todas las claes virtuales del maestro.</p>
+        <h3>Crear Lecciones</h3>
+        <p>Crea una Leccione  para los alumnos.</p>
         <h4>HTTP Request</h4>
         <p class="notice">
-            <span class="method get">GET</span>
-            <a href="<%= host %>/api/teacher/all-rooms/{id}">
-                <%= host %>/api/teacher/all-rooms/{id}
+            <span class="method post">POST</span>
+            <a href="<%= host %>/api/teacher/lessons/create/{room}">
+                <%= host %>/api/teacher/lessons/create/{room}
             </a>
         </p>
 
@@ -169,10 +74,10 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>id</td>
+                        <td>room</td>
                         <td><span class="method string">strgin</span> <span class="method required">required</span>
-                            example: <%= host %>/api/teacher/all-rooms/1
-                                <p>Un id valido si caracteres especiales</p>
+                            example: 1
+                            <p>Se necesita proporcionar un id de aula</p>
                         </td>
                     </tr>
 
@@ -181,13 +86,16 @@
         </figure>
 
 
-        <h3>Crear nueva Clase Virtual</h3>
-        <p>Crea una clase virtual para los alumnos.</p>
+    </div>
+
+    <div>
+        <h3>Actualizar Lecciones</h3>
+        <p>Actualiza una Leccion.</p>
         <h4>HTTP Request</h4>
         <p class="notice">
             <span class="method post">POST</span>
-            <a href="<%= host %>/api/teacher/add-virtual-room">
-                <%= host %>/api/teacher/add-virtual-room
+            <a href="<%= host %>/api/teacher/lessons/update/{lesson}">
+                <%= host %>/api/teacher/lessons/update/{lesson}
             </a>
         </p>
 
@@ -202,66 +110,26 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>name</td>
+                        <td>lesson</td>
                         <td><span class="method string">strgin</span> <span class="method required">required</span>
-                            example: Aula 1
-                            <p>Se necesita proporcionar un nombre de aula</p>
+                            example: 1
+                            <p>Se necesita proporcionar un id de Leccion</p>
                         </td>
                     </tr>
 
                     <tr>
-                        <td>level</td>
+                        <td>title</td>
                         <td><span class="method string">strgin</span> <span class="method required">required</span>
-                            example: Principiante, Avanzado etc.
-                            <p>Se necesita proporcionar un nivel de aula solo</p>
+                            example: New Title!
+                            <p>Se necesita proporcionar un nuevo titulo de Lección</p>
                         </td>
                     </tr>
 
                     <tr>
                         <td>desc</td>
-                        <td><span class="method string">strgin</span> <span class="method required">required</span>
-                            example: Esta es la descripción de esta aula 1
-                            <p>Se necesita proporcionar una descripción</p>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td>id</td>
-                        <td><span class="method string">strgin</span> <span class="method required">required</span>
-                            example: 1
-                            <p>Se necesita proporcionar una id de usuario valida</p>
-                        </td>
-                    </tr>
-
-                </tbody>
-            </table>
-        </figure>
-
-        <h3>Crear nueva Clase Virtual</h3>
-        <p>Crea una clase virtual para los alumnos.</p>
-        <h4>HTTP Request</h4>
-        <p class="notice">
-            <span class="method post">POST</span>
-            <a href="<%= host %>/api/teacher/delete-virtual-room/{id}">
-                <%= host %>/api/teacher/delete-virtual-room/{id}
-            </a>
-        </p>
-
-        <h4>Query Parameters</h4>
-        <figure>
-            <table>
-                <thead>
-                    <tr>
-                        <td>parameter</td>
-                        <td>description</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>id</td>
-                        <td><span class="method string">strgin</span> <span class="method required">required</span>
-                            example: 1
-                            <p>Se necesita proporcionar un id de aula</p>
+                        <td><span class="method string">strgin</span>
+                            example: this a description
+                            <p>Se necesita proporcionar una descripcion de Lección</p>
                         </td>
                     </tr>
 
